# magic_pong

./: .gitignore  .pre-commit-config.yaml  AI_REFACTOR_PLAN.md  ARCHITECTURE_ANALYSIS.md  CLAUDE.md  GAME_ENGINE_FIXES.md  GUI_README.md  LICENSE  Makefile  README.md  USAGE_EXAMPLES.md  configure_keyboard.py  play_pong.py  pyproject.toml  requirements.txt  test_config_menu.py  tox.ini  train_optimized.py  train_pretrained_dqn.py
.github/workflows/: ci.yml
examples/: game_modes_demo.py  pygame_gui_example.py
magic_pong/: __init__.py
magic_pong/ai/: __init__.py  interface.py  pretraining.py
magic_pong/ai/environment/: __init__.py  factory.py
magic_pong/ai/interfaces/: __init__.py  observation.py  reward.py
magic_pong/ai/models/: __init__.py  ai_vs_ai.py  dqn_ai.py  simple_ai.py  train_dqn.py
magic_pong/core/: __init__.py  collision.py  entities.py  game_engine.py  physics.py
magic_pong/core/interfaces/: physics.py  player.py  renderer.py
magic_pong/gui/: __init__.py  game_app.py  human_player.py  pygame_renderer.py
magic_pong/utils/: __init__.py  config.py  config_manager.py  keyboard_layout.py
src/: __init__.py
src/ai/: __init__.py  interface.py  pretraining.py
src/ai/environment/: factory.py
src/ai/examples/: __init__.py  ai_vs_ai.py  dqn_ai.py  simple_ai.py  train_dqn.py
src/ai/interfaces/: __init__.py  observation.py
src/ai/models/: ai_vs_ai.py  dqn_ai.py  dqn_ai_old.py  simple_ai.py  train_dqn.py
src/core/: __init__.py  collision.py  entities.py  game_engine.py  physics.py
src/core/interfaces/: __init__.py  physics.py  player.py
src/gui/: __init__.py  game_app.py  human_player.py  pygame_renderer.py
src/utils/: __init__.py  config.py  keyboard_layout.py
tests/: test_basic.py  test_config_ui.py  test_entities.py  test_environment.py  test_reward_interfaces.py
tests/core/: test_collision.py  test_physics.py
tests/utils/: test_config.py
