[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magic-pong"
version = "0.1.0"
description = "Un jeu de Pong élaboré conçu spécialement pour l'entraînement d'intelligence artificielle"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Adrien Berchet", email = "adrien@example.com"}
]
maintainers = [
    {name = "Adrien Berchet", email = "adrien@example.com"}
]
keywords = ["pong", "ai", "machine-learning", "reinforcement-learning", "game", "training"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.5.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
ai = [
    "torch>=2.0.0",
    "gymnasium>=0.29.0",
]
viz = [
    "matplotlib>=3.7.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "tox>=4.0.0",
    "pre-commit>=3.0.0",
]
all = [
    "magic-pong[ai,viz,dev]"
]

[project.urls]
Homepage = "https://github.com/adrienberchet/magic-pong"
Repository = "https://github.com/adrienberchet/magic-pong"
Documentation = "https://github.com/adrienberchet/magic-pong#readme"
"Bug Tracker" = "https://github.com/adrienberchet/magic-pong/issues"

[project.scripts]
magic-pong-tournament = "magic_pong.ai.examples.ai_vs_ai:tournament"
magic-pong-training = "magic_pong.ai.examples.ai_vs_ai:main"

[tool.setuptools]
packages = ["magic_pong", "magic_pong.core", "magic_pong.ai", "magic_pong.ai.examples", "magic_pong.utils"]

[tool.setuptools.package-dir]
"magic_pong" = "src"

# Configuration pour Black (formatage de code)
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Configuration pour Ruff (linting)
[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

# Configuration pour MyPy (vérification de types)
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pygame.*",
    "numpy.*",
]
ignore_missing_imports = true

# Configuration pour pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
