[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magic-pong"
version = "0.1.0"
description = "An advanced Pong game specifically designed for artificial intelligence training"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Adrien Berchet", email = "adrien.berchet@gmail.com"}
]
maintainers = [
    {name = "Adrien Berchet", email = "adrien.berchet@gmail.com"}
]
keywords = ["pong", "ai", "machine-learning", "reinforcement-learning", "game", "pygame"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.5.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
ai = [
    "torch>=2.0.0",
    "gymnasium>=0.29.0",
]
viz = [
    "matplotlib>=3.7.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "tox>=4.0.0",
    "pre-commit>=3.0.0",
]
all = [
    "magic-pong[ai,viz,dev]"
]

[project.urls]
Homepage = "https://github.com/adrien-berchet/magic-pong"
Repository = "https://github.com/adrien-berchet/magic-pong"
Documentation = "https://github.com/adrien-berchet/magic-pong#readme"
"Bug Tracker" = "https://github.com/adrien-berchet/magic-pong/issues"

[project.scripts]
magic-pong-tournament = "magic_pong.ai.models.ai_vs_ai:tournament"
magic-pong-training = "magic_pong.ai.models.ai_vs_ai:training"
magic-pong-gui = "magic_pong.gui.game_app:main"
magic-pong = "magic_pong.gui.game_app:main"

[tool.setuptools]
packages = ["magic_pong", "magic_pong.core", "magic_pong.ai", "magic_pong.ai.models", "magic_pong.utils", "magic_pong.gui"]

# Configuration for Ruff (linting)
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B905",
    "C901",  # too complex
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

# Configuration for MyPy (type checking)
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pygame.*",
    "numpy.*",
    "pydantic.*",
    "torch",
    "torch.*",
    "matplotlib",
    "matplotlib.*",
]
ignore_missing_imports = true

# Configuration for pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
